Fix configuration defaults. Add the ability to configure download url in admin config. Different style fixes as per PR notes.